RESOLVED FIXED155907
AX: VoiceOver not announcing the right header information for table on iOS
https://bugs.webkit.org/show_bug.cgi?id=155907
Summary AX: VoiceOver not announcing the right header information for table on iOS
Nan Wang
Reported 2016-03-25 16:41:38 PDT
1. Launch Safari and VoiceOver 2. Go to http://www.w3.org/WAI/tutorials/tables/caption-summary/ 3. Swipe right until reach example of Approach 3 4. Listen to the announcement of each cell of this table For the “Studio” cell, it’s announced as “1 bedroom, Studio”, For the first column, “1 bedroom” is announced as “2 bedroom, 1 bedroom”. It seemed those header informations were messed up by the empty cell at the beginning.
Attachments
initial patch (2.28 KB, patch)
2016-03-25 16:59 PDT, Nan Wang
no flags
patch (7.06 KB, patch)
2016-03-29 17:31 PDT, Nan Wang
no flags
Nan Wang
Comment 1 2016-03-25 16:41:59 PDT
Nan Wang
Comment 2 2016-03-25 16:59:01 PDT
Created attachment 274956 [details] initial patch My simulator keeps crashing. Will try to add a layout test later.
chris fleizach
Comment 3 2016-03-27 11:19:45 PDT
Comment on attachment 274956 [details] initial patch View in context: https://bugs.webkit.org/attachment.cgi?id=274956&action=review > Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:1067 > + if (rowRangeIndex >= rowHeaderRange.first && rowRangeIndex <= rowHeaderRange.first + rowHeaderRange.second - 1) { this should be equivalent right? rowRangeIndex < rowHeaderRange.first + rowHeaderRange.second > Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:1069 > + if (wrapper) if (AccessibilityObjectWrapper* wrapper = rowHeader->wrapper()) [headers add...
Nan Wang
Comment 4 2016-03-29 17:31:43 PDT
Created attachment 275158 [details] patch Got the simulator test working
WebKit Commit Bot
Comment 5 2016-03-29 19:02:46 PDT
Comment on attachment 275158 [details] patch Clearing flags on attachment: 275158 Committed r198819: <http://trac.webkit.org/changeset/198819>
WebKit Commit Bot
Comment 6 2016-03-29 19:02:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.