AX: VoiceOver not announcing the right header information for table on iOS https://bugs.webkit.org/show_bug.cgi?id=155907

Reviewed by Chris Fleizach.

Source/WebCore:

Make sure we consider the case where header elements size does not equal to
row size.

Test: accessibility/ios-simulator/table-row-column-headers.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityHeaderElements]):

LayoutTests:

* accessibility/ios-simulator/table-row-column-headers-expected.txt: Added.
* accessibility/ios-simulator/table-row-column-headers.html: Added.


Canonical link: https://commits.webkit.org/174118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198819 268f45cc-cd09-0410-ab3c-d52691b4dbfc